# alltomd

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT.md  README.md  vcpkg.json
include/alltomd/cli/: Options.h
include/alltomd/converter/: Converter.h  JsonConverter.h
include/alltomd/core/: DataArray.h  DataValue.h
include/alltomd/writer/: MarkdownWriter.h
src/: main.cpp
src/cli/: Parser.cpp
src/converter/: JsonConverter.cpp
src/core/: DataValue.cpp
src/writer/: MarkdownWriter.cpp
tests/: complex.json  invalid.json  object.json  test.json  teste.txt
